# FeMo_Analysis

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Dockerfile.train  FeMo_Analysis.py  Feature_Ranking.py  ML_Functions.py  README.md  SP_Functions.py  X_FPD_norm_ranked.txt  X_FPD_norm_ranked.txt.REMOVED.git-id  X_TPD_norm_ranked.txt  X_TPD_norm_ranked.txt.REMOVED.git-id  aws_server.py  femo.py  practice1.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  sn_ratio_optim.py  test.py  test.sh  utils.py
.github/workflows/: ci-check.yml  ci.yml  enforce-dev-pr.yml  pre-release.yml  release.yml
aws-sagemaker/: transform.py
aws_sagemaker/: Dockerfile  Dockerfile.process  Dockerfile.train  README.md  build_and_push.sh  inference.py  pipeline.py  process.py  requirements.txt  run_pipeline.py  run_pipeline.sh  utils.py
aws_sagemaker/code/: inference.py  nginx.conf  serve  train  utils.py  wsgi.py
aws_sagemaker/ml_pipeline/: run_pipeline.py
aws_sagemaker/steps/: __init__.py  condition.py  evaluate.py  extract.py  process.py  train.py
configs/: dataManifest.json.template  dataproc-cfg.yaml  dataset-cfg.yaml  dataset-cfg_beltA.yaml  dataset-cfg_beltAC.yaml  dataset-cfg_beltB.yaml  dataset-cfg_beltC.yaml  hyperparameters.yaml  inference-cfg.yaml  preprocess-cfg.yaml  train-cfg.yaml
femo/: __init__.py  __version__.py
femo/data/: TODO.md  dataset.py  pipeline.py  preprocess.py  process.py  ranking.py  utils.py
femo/eval/: metrics.py
femo/inference/: __init__.py  hiccup.py  inference.py  plot_utils.py  posture.py  utils.py
femo/logger/: __init__.py
femo/model/: __init__.py  adaboost.py  base.py  ensemble.py  femonet.py  log_regression.py  random_forest.py  svm.py  utils.py
femo/plot/: plotter.py
femo_analysis/: evaluate.py  inference.py  process.py  train.py
scripts/: analysis.sh  calc_percentile.py  evaluate.py  extract.py  inference.py  inference.sh  preprocess.py  process.py  repack.py  test.sh  train.py
src/: __version__.py  evaluate.py  process.py  process_data.py  requirements.txt
src/data/: TODO.md  (+15 more)
tests/: dataset-cfg.yaml  requirements.txt  test_classifiers.py  test_detections.py  test_extraction.py  test_features.py  test_fusion.py  test_pipeline.py  test_preprocess.py  test_ranking.py  test_segmentation.py  test_split.py  test_transforms.py  utils.py
(+49 files in other folders)
